# huffman-coding

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.lock.rxc  flake.nix  pre-commit.sh
benches/: decoding.rs  encoding.rs  integration.rs  window.rs  window_primitives.rs
man/: huffman.1
src/: bitutils.rs  error.rs  lib.rs  main.rs  table.rs  tree.rs  window.rs
