[package]
name = "huffman"
version = "0.1.0"
authors = ["devensiv <devensiv@devensiv.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tempfile = "3.8.1"

[[bench]]
name = "encoding"
harness = false

[[bench]]
name = "decoding"
harness = false

[features]
